# x-QiuChi

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.en.md  README.md  config.yaml  docker-compose.yml  main.py  pyproject.toml
.claude/: settings.local.json
examples/mcp_clients/: langchain_mcp_client.py  mcp_client.py
examples/mcp_servers/: weather_mcp_server.py
src/: __init__.py  main.py  xxx.py
src/core/: types.py
src/core/config/: __init__.py  config.py
src/core/logging/: __init__.py  logger.py
src/core/middleware/: __init__.py  auth.py  base.py  cache.py  error_handler.py  logging.py
src/core/plugins/: __init__.py  base.py  discovery.py  manager.py  registry.py
src/core/server/: __init__.py  lifecycle.py  server.py
src/core/transport/: __init__.py  transport.py
src/examples/: __init__.py
src/examples/prompts/: templates.py
src/examples/resources/: config.py
src/examples/tools/: math.py
src/plugins/: __init__.py  base.py  decorators.py  discovery.py  manager.py  registry.py
src/plugins/prompts/: __init__.py
src/plugins/resources/: __init__.py
src/plugins/tools/: __init__.py
src/runtime/: __init__.py  context.py
tests/: test_integration.py
